[gd_scene load_steps=3 format=3 uid="uid://ce4txtp5sdg6e"]

[ext_resource type="Script" path="res://scripts/clickable_text.gd" id="1_15rrv"]

[sub_resource type="BoxShape3D" id="BoxShape3D_44tvi"]
size = Vector3(1.2, 0.2, 0.4)

[node name="ClickableText" type="Node3D"]
script = ExtResource("1_15rrv")

[node name="Label" type="Label3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.01, 0)
text = "Process"
font_size = 40
outline_size = 10
uppercase = true

[node name="Area3D" type="Area3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 1.06581e-14, 0, -1.06581e-14, 1, 0, 0, 0)

[node name="CollisionShape3D" type="CollisionShape3D" parent="Area3D"]
shape = SubResource("BoxShape3D_44tvi")

[connection signal="mouse_entered" from="Area3D" to="." method="_on_area_3d_mouse_entered"]
[connection signal="mouse_exited" from="Area3D" to="." method="_on_area_3d_mouse_exited"]
